--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,3 +1,8 @@
+body {
+  text-align: center;
+  image-resolution:
+}
+
 nav {
   font-family: Helvetica;
   text-align: center;
@@ -5,6 +10,12 @@ nav {
 
 a {
   color: grey;
+}
+
+p {
+  font-family: Helvetica;
+  font-size: 16px;
+  font-weight: lighter;
 }
 
 .h1 {
@@ -17,12 +28,11 @@ a {
   text-align: center;
 }
 
-p {
-  font-family: Helvetica;
-  font-size: 16px;
-  font-weight: lighter;
-}
 
 .manifesto {
   text-align: center;
+}
+
+.radio {
+  width: 70%;
 }
